--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="style.css"/>
-  <script src="app.js"></script>
+  <link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
+<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
+<meta charset=utf-8 />
   <title>Registration Form</title>
 </head>
 
@@ -44,41 +47,38 @@
       <input type="text" name="phone" id="phone" required>
 
       <label class="" for="file">File:</label>
-      <input type="file" name="file" id="file" required>
+      <input type="file" name="file" id="file" onchange="readURL(this);">
+      <br>
+      <br>
 
-      <!-- <label for="job">Job Role:</label>
-      <select name="job" id="job" required>
-        <optgroup label="Web">
-          <option value="front_end_developer" id="frontend">Frontend Developer</option>
-          <option value="back_end_developer" id="backend">Backend Developer</option>
-          <option value="fullstack_developer" id="fullstack">Fullstack Developer</option>
-        </optgroup>
-        <optgroup label="Mobile">
-          <option value="android" id="android">Android</option>
-          <option value="ionic" id="ionic">Ionic</option>
-          <option value="phonegap" id="phonegap">PhoneGap</option>
-        </optgroup>
-      </select>
-      <br /><br />
-      <label>Interest:</label>
-      <select id="interest" required>
-        <option value="development">Development</option>
-        <option value="design">Design</option>
-        <option value="business">Business</option>
-      </select>
- -->
+      <img id="blah" src="" alt="image">
+      
 
       <button type="submit" sendMessage()>Submit</button>
   </form>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-app.js"></script>
 
-  <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-app.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-analytics.js"></script>
 
-  <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
-  <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-analytics.js"></script>
-
-  <!-- Add Firebase products that you want to use -->
-  <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-firestore.js"></script>
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDfVOuuXvDdMM9JjFPd8Rlm1Vay37nOZ-s",
+    authDomain: "dhishna-5bced.firebaseapp.com",
+    databaseURL: "https://dhishna-5bced.firebaseio.com",
+    projectId: "dhishna-5bced",
+    storageBucket: "dhishna-5bced.appspot.com",
+    messagingSenderId: "982804724657",
+    appId: "1:982804724657:web:2af7381ab17033cb8d5b90",
+    measurementId: "G-Z21XMXKRV0"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
   <script src="app.js"></script>
 </body>
 
