--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <br>
       <br>
 
-      <img id="blah" src="">
+      <img id="blah" src="" alt="photo">
       
 
       <button type="submit" sendMessage()>Submit</button>
